# berlin-hackathon-2026-hera

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  HERA.md  Makefile  README.md  hera-video-hackathon.pen
26/020c4909a0/: metadata.json
2a/bd4d222296/: metadata.json
5b/4c60c47c5a/: metadata.json
97/5433e4f886/: metadata.json
a6/999c8db504/: metadata.json
architecture/: 01-ui-flow.md  02-architecture.md  03-agent-pipeline.md  04-airbnb-scrape-schema.json  04-airbnb-scrape-template.json  05-neighborhood-google-places.md  implementation.md
backend/: pyproject.toml
backend/scripts/: demo_pipeline_terminal.py  entrypoint.sh  print_phase1_core.py  probe_hera.py  probe_places_agent.py  probe_scrape.py  render_landing_videos.py  run_icp.py  scrape_to_fixture.py
backend/src/: auth.py  belief_evolution.py  limits.py  logger.py  main.py  supabase_client.py  youtube.py
backend/src/agent/: Final_Assembly.py  ICP_Classifier.py  Location_Enrichment.py  Photo_Analyser.py  Reviews_evaluation.py  Visual_systems.py  __init__.py  beliefs.py  classifier.py  final_assembly.py  fixture_loader.py  icp_classifier.py  image_scorer.py  location_enrichment.py  models.py  neighborhood_context.py  orchestrator.py  outpainter.py  photo_analyser.py  prompt_builder.py  reviews_evaluation.py  scraper.py  visual_systems.py
backend/src/agent/fixtures/: kreuzberg-loft.json  property-1.json  property-2.json  property-3.json
d3/91c790f868/: metadata.json
da/3bc73d55fe/: metadata.json
dd/dd734ab01f/: metadata.json
e5/572f4a40d6/: metadata.json
f9/d392852a1d/: metadata.json
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx  router.tsx  types.ts
supabase/migrations/: 001_phase2_schema.sql  (+5 more)
(+133 files in other folders)
