[project]
name = "berlin-hackathon-2026-hera-backend"
version = "0.1.0"
description = "FastAPI backend that proxies the Hera video API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
    "playwright>=1.49",
    "anthropic>=0.40.0",
    "supabase>=2.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
