[project]
name = "berlin-hackathon-2026-hera-backend"
version = "0.1.0"
description = "FastAPI backend that proxies the Hera video API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
    # Pinned to 1.49.x because the Docker base image is
    # mcr.microsoft.com/playwright/python:v1.49.0-noble — bumping the Python
    # package without bumping the image leaves Chromium binaries missing and
    # every BrowserType.launch() crashes with "Executable doesn't exist".
    "playwright>=1.49,<1.50",
    "google-genai>=0.8",
    "supabase>=2.9",
    "pyjwt[crypto]>=2.9",
    "slowapi>=0.1.9",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.140",
    "itsdangerous>=2.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
